--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^19.1.1",
     "react-router": "^7.9.1",
     "react-router-dom": "^7.9.1",
+    "react-use": "^17.6.0",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
